--- a/parallax/index.html
+++ b/parallax/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<header>
 			<div class="parallax-container">
-				<h1>2015 Collection</h1>
+				<h1>Parallax Effect</h1>
 				<div class="block1 parallax" data-parallax="100"></div>
 			</div>
 		</header>
